auth is finished
